--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -28,6 +28,8 @@
       "vitest/globals", "@testing-library/jest-dom", "@testing-library/react"
     ],
     "composite": true,
+    "esModuleInterop": true,
+
   },
   "include": ["src", "src/**/*.tsx"],
   "exclude": ["node_modules", "**/*.test.ts"]
