--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -30,6 +30,6 @@
     "composite": true,
     "esModuleInterop": true
   },
-  "include": ["src", "src/**/*.tsx"],
+  "include": ["src", "src/**/**/*.tsx"],
   "exclude": ["node_modules", "**/*.test.ts"]
 }
